infra/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-workload
  labels:
    name: app-workload
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
